--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -33,10 +33,26 @@ input {
   border: none;
   background-color: transparent;
   text-align: center;
-  color: #FFF;
+  color: #fff;
   border-bottom: 6px solid #fff;
   -moz-appearance: textfield;
 }
 input:focus {
   outline: none;
+}
+.text-result {
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3em;
+  display: none;
+  text-align: center;
+  margin-top: 40px;
+  padding: 25px;
+  border-style: dashed;
+}
+.text-result span {
+  font-weight: bold;
+  color: #f7b731;
+  font-size: 3em;
+  display: block;
 }
