--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -42,11 +42,29 @@ input{
     border: none;
     background-color: transparent;
     text-align: center;
-    color: #FFF;
-    border-bottom: 6px solid #fff;
+    color: @titleColor;
+    border-bottom: 6px solid @titleColor;
     -moz-appearance: textfield;
 
     &:focus{
         outline: none;
+    }
+}
+
+.text-result {
+    color: @titleColor;
+    font-family: @firstFont;
+    font-size: 1.3em;
+    display: none;
+    text-align: center;
+    margin-top: 40px;
+    padding: 25px;
+    border-style: dashed;
+
+    span{
+        font-weight: bold;
+        color: @btnBackground;
+        font-size: 3em;
+        display: block;
     }
 }
